--- a/style.css
+++ b/style.css
@@ -1,1 +1,80 @@
-style.css
+body{
+    margin: 0%;
+    font-family: 'Poppins', sans-serif;
+}
+h1{
+    font-size: 50px;
+}
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgrey;
+}
+.orange-highlight{
+    color: orange;
+}
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.half-width img{
+    width: 100%;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+   
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.text-button{
+    text-decoration: none;
+    background-image: linear-gradient( 10deg, rgb(141, 116, 116), orange);
+    padding: 10px 20px;
+    border-radius: 25px;
+    color: red;
+    font-weight: bold;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient( 10deg, rgb(141, 116, 116), orange);
+    padding: 10px 20px;
+    border-radius: 25px;
+    color: red;
+    font-weight: bold;
+}
+.dream-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-exprience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+    background-color: white;
+}
+.exprience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    font-size: 12px;
+}
